2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Add parenthesis.
	* src/groupmems.c: Avoid implicit conversion of pointers / chars to
	booleans.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmems.c: Allow everybody to list the users of a group.
	This information is publicly available in /etc/group.
	* NEWS, src/groupmems.c: Open /etc/group read only for the -l option.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupmems.8.xml: Sort options alphabetically.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c (check_perms): Simplify. Always call pam_end()
	at the end of the authentication.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Add fail_exit() to remove the group lock file
	in case of failure. Replace the calls to exit() by fail_exit().

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Reduce the number of checks. Isolate the
	parameters setting and permissions checking.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Add functions process_flags() and check_perms()
	from code of main().
	* src/groupmems.c: Harmonize the failure message in case of PAM
	failure with the other programs.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Remove isgroup(), which always returns TRUE.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Reuse the functions from libmisc/list.c to deal
	with user lists. addtogroup() was broken when realloc() move the
	memory area.
	* src/groupmems.c: Report failures with the name of the program.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: EXIT_READ_GROUP changed to EXIT_INVALID_GROUP.
	* src/groupmems.c: EXIT_INVALID_USERNAME changed to EXIT_INVALID_USER.
